--- a/Python/pycharm/flask/corona/templates/base.html
+++ b/Python/pycharm/flask/corona/templates/base.html
@@ -2,7 +2,7 @@
 
 <html  lang="ko">
 <head>
-  <title>1조 임영택</title>
+  <title> Corona 19 </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -19,17 +19,8 @@
        <a class="navbar-brand" href="http://127.0.0.1:5000/">test</a>
      </div>
      <ul class="nav navbar-nav">
-       <li class="active"><a href="http://127.0.0.1:5000">Home</a></li>
-       <li><a href="http://127.0.0.1:5000/corona19">코로나</a></li>
-       <li><a href="http://127.0.0.1:5000/image_map">이미지맵</a></li>
-       <li><a href="http://127.0.0.1:5000/table1">테이블예</a></li>
-       <li><a href="http://127.0.0.1:5000/python">download</a></li>
-       <li><a href="http://127.0.0.1:5000/sch">일정관리</a></li>
-       <li><a href="http://127.0.0.1:5000/sungjuk_call">성적관리</a></li>
-     </ul>
-     <ul class="nav navbar-nav navbar-right">
-       <li><a href="http://127.0.0.1:5000/"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-       <li><a href="http://127.0.0.1:5000/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+       <li class="active"><a href="http://127.0.0.1:5000">코로나19 감염자 예측모델</a></li>
+       <li><a href="http://127.0.0.1:5000/corona19"> test </a></li>
      </ul>
   </div>
 </nav>
