--- a/Python/pycharm/flask/corona/templates/base.html
+++ b/Python/pycharm/flask/corona/templates/base.html
@@ -20,7 +20,7 @@
      </div>
      <ul class="nav navbar-nav">
        <li class="active"><a href="http://127.0.0.1:5000">코로나19 감염자 예측모델</a></li>
-       <li><a href="http://127.0.0.1:5000/corona19"> test </a></li>
+       <li><a href="http://127.0.0.1:5000/corona19"> 2020-02-25 </a></li>
      </ul>
   </div>
 </nav>
