--- a/Python/pycharm/flask/untitled/templates/sungjuk.html
+++ b/Python/pycharm/flask/untitled/templates/sungjuk.html
@@ -66,7 +66,7 @@
       </tr>
     </thead>
     <tbody>
-     {% for sungjuk in object_list %} #파이썬에서 가져옴
+     {% for sungjuk in object_list %}
     <tr>
          <td>{{ sungjuk[0] }}</td>  <td>{{ sungjuk[1] }} </td> <td>{{ sungjuk[2] }}</td>  <td>{{ sungjuk[3] }}</td>
          <td>{{ sungjuk[4] }}</td>  <td>{{ sungjuk[5] }} </td> <td>{{ sungjuk[6] }}</td>
